--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<head>
+	<script src='//code.jquery.com/jquery-1.11.3.min.js'/>
+	<script src='//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js'/>
+</head>
+<body>
 <h1>Hello!</h1>
 <button id="ready">Ready?</button>
 <div id="audioBox" style="display:block;height:100px;width:100px;">
@@ -57,3 +62,4 @@ $('#ready').click(function() {
 	audio.play();
 });
 </script>
+</body>
