--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-	<script src='//code.jquery.com/jquery-1.11.3.min.js'/>
-	<script src='//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js'/>
+	<script src='//code.jquery.com/jquery-1.11.3.min.js'></script>
+	<script src='//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js'></script>
 </head>
 <body>
 <h1>Hello!</h1>
