--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </div>
 
 <script>
-songs=[
-'/site/sgfilecabinet/home/Aaron%20Cabott%20Jones.mp3',
+songs=["https://github.com/CoreHoundSystem/Tether/blob/master/back-home.mp3"];
+/*'/site/sgfilecabinet/home/Aaron%20Cabott%20Jones.mp3',
 '/site/sgfilecabinet/home/Bil473.mp3',
 '/site/sgfilecabinet/home/cryptic.mp3',
 '/site/sgfilecabinet/home/Erika%20Ordinary%20Promo.mp3',
@@ -30,13 +30,13 @@ songs=[
 '/site/sgfilecabinet/home/Tangled%20Up%20In%20Blue%20by%20Traveler.mp3',
 '/site/sgfilecabinet/home/wolfie.mp3',
 '/site/sgfilecabinet/home/zak.mp3'
-];
+];*/
 
 var audio;
 
 function playMusic(x,y) {
 	$('#audioBox').empty();
-	$('#audioBox').append('<audio id="myAudio" src="https://sites.google.com' + x[y] + '" autoplay="true" type="audio/mp3" volume="1.0"></audio>');
+	$('#audioBox').append('<audio id="myAudio" src="' + x[y] + '" autoplay="true" type="audio/mp3" volume="1.0"></audio>');
 	//$('#myAudio').attr('src','https://sites.google.com' + x[y]);
 	audio=document.getElementById("myAudio");
 	audio.play();
