--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </div>
 
 <script>
-songs=["https://github.com/CoreHoundSystem/Tether/blob/master/back-home.mp3"];
+songs=["https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/back-home.mp3"];
 /*'/site/sgfilecabinet/home/Aaron%20Cabott%20Jones.mp3',
 '/site/sgfilecabinet/home/Bil473.mp3',
 '/site/sgfilecabinet/home/cryptic.mp3',
