--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<audio id="myAudio" src="https://sites.google.com/site/sgfilecabinet/home/Aaron%20Cabott%20Jones.mp3" autoplay="false" volume="1.0"></audio>
 		</div>
 		<script>
-			song=["https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/Taunter%20Goodnight%20Sings%20Me%20and%20Bobby%20McGee%20in%20Secondlife.mp3"];
+			songs=["https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/Taunter%20Goodnight%20Sings%20Me%20and%20Bobby%20McGee%20in%20Secondlife.mp3"];
 			function playMusic(x,y) {
 			$('#audioBox').empty();
 			$('#audioBox').append('<audio id="myAudio" src="https://sites.google.com' + x[y] + '" autoplay="true" type="audio/mp3" volume="1.0"></audio>');
