--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 	</head>
 	<body>
-		<button id="ready">Ready?</button>
+		<button id="ready">Ready Now?</button>
 		<div id="audioBox" style="display:block;height:100px;width:100px;">
 			<audio id="myAudio" src="https://sites.google.com/site/sgfilecabinet/home/Aaron%20Cabott%20Jones.mp3" autoplay="false" volume="1.0"></audio>
 		</div>
@@ -21,7 +21,7 @@
 			songs=["https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/Taunter%20Goodnight%20Sings%20Me%20and%20Bobby%20McGee%20in%20Secondlife.mp3"];
 			function playMusic(x,y) {
 			$('#audioBox').empty();
-			$('#audioBox').append('<audio id="myAudio" src="https://sites.google.com' + x[y] + '" autoplay="true" type="audio/mp3" volume="1.0"></audio>');
+			$('#audioBox').append('<audio id="myAudio" src="' + x[y] + '" autoplay="true" type="audio/mp3" volume="1.0"></audio>');
 			//$('#myAudio').attr('src','https://sites.google.com' + x[y]);
 			audio=document.getElementById("myAudio");
 			audio.play();
