--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
 		<script src='https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js'></script>
-		<script src="https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/Headerscript.js"></script>
+		<script src="http://tether.corehoundsystem.com/Headerscript.js"></script>
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 		
 		<meta name="google-signin-client_id" content="833721381252-smfnva31dl66h8n6ffikc99f50ff4dqo.apps.googleusercontent.com">
