--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
       { src: 'https://dummyimage.com/192x192', sizes: '192x192', type: 'image/png' },
       { src: 'https://dummyimage.com/256x256', sizes: '256x256', type: 'image/png' },
       { src: 'https://dummyimage.com/384x384', sizes: '384x384', type: 'image/png' },
-      { src: 'https://dummyimage.com/512x512', sizes: '512x512', type: 'image/png' },
+      { src: 'https://secondlife.com/app/image/589505a4-f05b-a00a-6ac1-750863fb45d2/1', sizes: '512x512', type: 'image/png' },
     ]
   });
 
   navigator.mediaSession.setActionHandler('play', function() {});
   navigator.mediaSession.setActionHandler('pause', function() {});
-  navigator.mediaSession.setActionHandler('seekbackward', function() {});
-  navigator.mediaSession.setActionHandler('seekforward', function() {});
-  navigator.mediaSession.setActionHandler('previoustrack', function() {});
+  //navigator.mediaSession.setActionHandler('seekbackward', function() {});
+  //navigator.mediaSession.setActionHandler('seekforward', function() {});
+  //navigator.mediaSession.setActionHandler('previoustrack', function() {});
   navigator.mediaSession.setActionHandler('nexttrack', function() {});
 }
 		</script>
