--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 			songURL="https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/songs/";
 			songArtistKey="1EHmHCY8-n9wVSkimbL2k7d7NMZDo8xSsrtIuaRRJwNM";
 			$(function() {
-				getSongs(songArtistKey,"1","songs");
+				//getSongs(songArtistKey,"1","songs");
 				
 			});
 			function getSongs(x,y,z) {
