--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 					genres.push(songs[sIndex].genre);
 				}
 			}
+			$('body').append(genres);
 			console.log(genres);
 			for(var i=0;i<songs.length;i++) {
 				console.log(songs[i]);
