--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			} else {
 				commercialTicker++;
 				window["currentSong"]=cSongs[songNumber];
-				//if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+				if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
 					if ('mediaSession' in navigator) {
 						navigator.mediaSession.metadata = new MediaMetadata({
 							title: currentSong.title,
@@ -117,7 +117,7 @@
 						//navigator.mediaSession.setActionHandler('seekforward', function() {});
 						navigator.mediaSession.setActionHandler('nexttrack', playSong());
 					}
-				//}
+				}
 				buildActiveSong(currentSong);
 			}
 		}
