--- a/index.html
+++ b/index.html
@@ -96,7 +96,29 @@
 			} else {
 				commercialTicker++;
 				window["currentSong"]=cSongs[songNumber];
-				
+				mediaImage="https://secondlife.com/app/image/589505a4-f05b-a00a-6ac1-750863fb45d2/1";
+				//if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+					if ('mediaSession' in navigator) {
+						navigator.mediaSession.metadata = new MediaMetadata({
+							title: currentSong.title,
+							artist: currentSong.name,
+							album: currentSong.albumEvent,
+							artwork: [
+								{src:mediaImage,sizes:'96x96',type:'image/png'},
+								{src:mediaImage,sizes:'128x128',type:'image/png'},
+								{src:mediaImage,sizes:'192x192',type:'image/png'},
+								{src:mediaImage,sizes:'256x256',type:'image/png'},
+								{src:mediaImage,sizes:'384x384',type:'image/png'},
+								{src:mediaImage,sizes:'512x512',type:'image/png'},
+							]
+						});
+						navigator.mediaSession.setActionHandler('play',togglePause());
+						navigator.mediaSession.setActionHandler('pause',togglePause());
+						//navigator.mediaSession.setActionHandler('seekbackward', function() {});
+						//navigator.mediaSession.setActionHandler('seekforward', function() {});
+						navigator.mediaSession.setActionHandler('nexttrack', playSong());
+					}
+				//}
 				buildActiveSong(currentSong);
 			}
 		}
