--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 							artist: currentSong.name,
 							album: currentSong.albumEvent,
 							artwork: [
-								{src:mediaImage,sizes:'96x96',type:'image/png'},
-								{src:mediaImage,sizes:'128x128',type:'image/png'},
-								{src:mediaImage,sizes:'192x192',type:'image/png'},
-								{src:mediaImage,sizes:'256x256',type:'image/png'},
-								{src:mediaImage,sizes:'384x384',type:'image/png'},
-								{src:mediaImage,sizes:'512x512',type:'image/png'},
+								{src:mediaImage,sizes:'96x96',type:'image/jpg'},
+								{src:mediaImage,sizes:'128x128',type:'image/jpg'},
+								{src:mediaImage,sizes:'192x192',type:'image/jpg'},
+								{src:mediaImage,sizes:'256x256',type:'image/jpg'},
+								{src:mediaImage,sizes:'384x384',type:'image/jpg'},
+								{src:mediaImage,sizes:'512x512',type:'image/jpg'},
 							]
 						});
 						navigator.mediaSession.setActionHandler('play',togglePause());
