--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						navigator.mediaSession.metadata = new MediaMetadata({
 							title: currentSong.title,
 							artist: currentSong.name,
-							album: currentSong.albumEvent,
+							album: "albumEvent",
 							artwork: [
 								{src:mediaImage,sizes:'96x96',type:'image/jpg'},
 								{src:mediaImage,sizes:'128x128',type:'image/jpg'},
