--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
 				commercialTicker++;
 				window["currentSong"]=cSongs[songNumber];
 				mediaImage="https://secondlife.com/app/image/589505a4-f05b-a00a-6ac1-750863fb45d2/1";
-				$('body').append(mediaImage + cSongs[songNumber].title + cSongs[songNumber].name + currentSong);
-				console.log(mediaImage + cSongs[songNumber].title + cSongs[songNumber].name + currentSong);
+				$('body').append(mediaImage + cSongs[songNumber].title + cSongs[songNumber].artist + currentSong);
+				console.log(mediaImage + cSongs[songNumber].title + cSongs[songNumber].artist + currentSong);
 				$('body').append(currentSong);
 				console.log(currentSong);
 				//if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
 					if ('mediaSession' in navigator) {
 						navigator.mediaSession.metadata = new MediaMetadata({
 							title: currentSong.title,
-							artist: currentSong.name,
-							album: "albumEvent",
+							artist: currentSong.artist,
+							album: currentSong.albumEvent,
 							artwork: [
 								{src:mediaImage,sizes:'96x96',type:'image/jpg'},
 								{src:mediaImage,sizes:'128x128',type:'image/jpg'},
