--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		}
 
 		function togglePause() {
+			console.log(audio);
 			audio=document.getElementById("activeSong");
 			if(audio.paused) {
 				audio.play();
