--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		function togglePause() {
 			console.log(audio);
 			audio=document.getElementById("activeSong");
+			console.log(audio);
 			if(audio.paused) {
 				audio.play();
 			} else {
