--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
 			}
 		}
 
-		function togglePause() {
-			audio=document.getElementById("activeSong");
-			console.log(audio);
-			if(audio.paused) {
-				audio.play();
+		function togglePause(x) {
+			console.log(x);
+			if(x.paused) {
+				x.play();
 			} else {
-				audio.pause();
+				x.pause();
 			}
 		}
 
@@ -117,8 +116,8 @@
 								{src:mediaImage,sizes:'512x512',type:'image/jpg'},
 							]
 						});
-						navigator.mediaSession.setActionHandler('play',togglePause());
-						navigator.mediaSession.setActionHandler('pause',togglePause());
+						navigator.mediaSession.setActionHandler('play',togglePause(document.getElementById("activeSong")));
+						navigator.mediaSession.setActionHandler('pause',togglePause(document.getElementById("activeSong")));
 						//navigator.mediaSession.setActionHandler('seekbackward', function() {});
 						//navigator.mediaSession.setActionHandler('seekforward', function() {});
 						navigator.mediaSession.setActionHandler('nexttrack', playSong());
