--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 		}
 
 		function togglePause() {
-			console.log($('#activeSong'));
-			if($('#activeSong').paused) {
-				$('#activeSong').play();
+			audio=document.getElementById("activeSong");
+			if(audio.paused) {
+				audio.play();
 			} else {
-				$('#activeSong').pause();
+				audio.pause();
 			}
 		}
 
@@ -116,8 +116,8 @@
 								{src:mediaImage,sizes:'512x512',type:'image/jpg'},
 							]
 						});
-						navigator.mediaSession.setActionHandler('play',togglePause());
-						navigator.mediaSession.setActionHandler('pause',togglePause());
+						//navigator.mediaSession.setActionHandler('play',togglePause());
+						//navigator.mediaSession.setActionHandler('pause',togglePause());
 						//navigator.mediaSession.setActionHandler('seekbackward', function() {});
 						//navigator.mediaSession.setActionHandler('seekforward', function() {});
 						navigator.mediaSession.setActionHandler('nexttrack', playSong());
