--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			dislikes=c.dislikes.split("|");
 			genres=[];
 			window["cSongs"]=[];
-			window["rPlayed"]=[];
+			window["rPlayed"]=["abc"];
 			window["commercialTicker"]=0;
 			for(var i=0;i<likes.length;i++) {
 				sIndex=0;
