--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 			console.log(cSongs);
 			currentSong=cSongs[songNumber];
 			if(rPlayed.indexOf(cSongs[songNumber])!=-1) {
+				console.log("Why am I retrying?");
 				playSong();
 			} else {
 				commercialTicker++;
