--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				//console.log(mediaImage + currentSong.title + currentSong.artist);
 				$('body').append(currentSong);
 				console.log(currentSong);
-				//if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+				if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
 					if ('mediaSession' in navigator) {
 						navigator.mediaSession.metadata = new MediaMetadata({
 							title: currentSong.title,
@@ -126,7 +126,7 @@
 						//navigator.mediaSession.setActionHandler('seekforward', function() {});
 						//navigator.mediaSession.setActionHandler('nexttrack', playSong());
 					}
-				//}
+				}
 				buildActiveSong(currentSong);
 			}
 		}
