--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						//navigator.mediaSession.setActionHandler('pause',togglePause());
 						//navigator.mediaSession.setActionHandler('seekbackward', function() {});
 						//navigator.mediaSession.setActionHandler('seekforward', function() {});
-						//navigator.mediaSession.setActionHandler('nexttrack', playSong());
+						navigator.mediaSession.setActionHandler('nexttrack', playSong());
 					}
 				}
 				buildActiveSong(currentSong);
