--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 			console.log(songNumber);
 			console.log(cSongs);
 			currentSong=cSongs[songNumber];
+			$('body').append(currentSong);
 			if(rPlayed.indexOf(cSongs[songNumber])!=-1) {
 				console.log("Why am I retrying?");
 				playSong();
