--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 						});
 						//navigator.mediaSession.setActionHandler('play',togglePause());
 						//navigator.mediaSession.setActionHandler('pause',togglePause());
-						//navigator.mediaSession.setActionHandler('seekbackward', function() {});
-						//navigator.mediaSession.setActionHandler('seekforward', function() {});
-						navigator.mediaSession.setActionHandler('nexttrack', playSong());
+						navigator.mediaSession.setActionHandler('seekbackward', function() {});
+						navigator.mediaSession.setActionHandler('seekforward', function() {});
+						//navigator.mediaSession.setActionHandler('nexttrack', playSong());
 					}
 				}
 				buildActiveSong(currentSong);
