--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 		<script src='https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js'></script>
 		<script src="https://tether.corehoundsystem.com/Headerscript.js"></script>
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
-		
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141646766-1"></script>
 		<meta name="google-signin-client_id" content="833721381252-smfnva31dl66h8n6ffikc99f50ff4dqo.apps.googleusercontent.com">		
 	</head>
 	<body>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('set', {'user_id': 'USER_ID'});
+			gtag('config', 'UA-141646766-1');
+		</script>
 		<div id="tetherHeader"></div>
 		<div id="tetherBody"></div>
 		<div id="activeChannel"></div>
