--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <html>
 	<head>
+		<title>Tether, Take SL Music With You!</title>
 		<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
 		<script src='https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js'></script>
 		<script src="https://tether.corehoundsystem.com/Headerscript.js"></script>
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141646766-1"></script>
-		<meta name="google-signin-client_id" content="833721381252-smfnva31dl66h8n6ffikc99f50ff4dqo.apps.googleusercontent.com">		
-	</head>
-	<body>
+		<meta name="google-signin-client_id" content="833721381252-smfnva31dl66h8n6ffikc99f50ff4dqo.apps.googleusercontent.com">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@handle">
+		<meta name="twitter:creator" content="@handle">
+		<meta name="twitter:title" content="Tether, Take SL Music With You!">
+		<meta name="twitter:image" content="https://image">
+		<meta name="og:title" content="Tether, Take SL Music With You!">
+		<meta name="og:description" content="Listen to your favorite SL musicians anywhere, anytime.">
+		<meta name="og:image" content="https://image">
+		<meta name="og:locale" content="en_US">
+		<meta name="og:site_name" content="Tether">
+		<meta name="og:url" content="https://tether.corehoundsystem.com">
+		<meta name="description" content="Listen to your favorite SL musicians anywhere, anytime.">
+		<meta name="keywords" content="second life, music, live, cover, original">
+		<meta name="language" content="English">
+		<meta name="copyright" content="Tether, LLC">
+		<meta name="web_author" content="OneDollarGenius">
+		<meta http-equiv="window-target" content="_top">
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
@@ -15,6 +31,9 @@
 			gtag('set', {'user_id': 'USER_ID'});
 			gtag('config', 'UA-141646766-1');
 		</script>
+	</head>
+	<body>
+		
 		<div id="tetherHeader"></div>
 		<div id="tetherBody"></div>
 		<div id="activeChannel"></div>
