--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					cL('Name: ' + profile.getName());
 					cL('Image URL: ' + profile.getImageUrl());
 					cL('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-					loadUser(profile.getID());
+					loadUser(profile.getId());
 				}
 				
 				function signOut() {
