--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 			<div class="g-signin2" data-onsuccess="onSignIn"></div>
 			<a href="#" onclick="signOut();">Sign out</a>
 			<script>
-				$(function() {
+				/*$(function() {
 					loadUser("110422615478236421761");
-				});
+				});*/
 				
 				function onSignIn(googleUser) {
 					var profile = googleUser.getBasicProfile();
