--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<body>
 		<script id="libraryScripts">
 			testMode=1;
+			songURL="https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/songs/";
 			syncURL="https://docs.google.com/forms/d/e/1FAIpQLSe-bJWth2cKQ7-jo0vOHD_mSaIQIQfJN4aFcskKBfMaeH7zhw/formResponse?usp=pp_url&entry.762123824=";
 			userSyncs="1GDyPff8QkQynVWfOWZIFNli4Lz8NtScWPc1U5uIwOOM";
 			chanKey="1i9SfwLkDj40yOqOmRMAhe4FXI5fjjjyufx8Nz_IPKbg";
